# tinyECS

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md
include/: tiny_ecs.hpp
src/: ecs_demo.cpp  tiny_ecs.cpp
src/tinyECS/: tiny_ecs.cpp  tiny_ecs.hpp
